# rust_tests

./: Cargo.toml
plugin/src/: lib.rs
scrapper/: Cargo.toml  out.txt
scrapper/src/: main.rs
src/: lib.rs
